# MCLARecomp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  missing_instructions.txt
ghidra_proj/MCLA.rep/: project.prp
ghidra_proj/MCLA.rep/idata/: ~journal.bak
ghidra_proj/MCLA.rep/idata/00/: 00000000.prp
ghidra_proj/MCLA.rep/idata/00/~00000000.db/: changeA.grf
ghidra_proj/MCLA.rep/user/00/: 00000000.prp
ghidra_proj/MCLA.rep/user/00/~00000000.db/: db.1.gbf
lib/: CMakeLists.txt
lib/config/: mcla.toml  mcla_switch_tables.toml
lib/ppc/: ppc_config.h  ppc_context.h  ppc_func_mapping.cpp  ppc_recomp.0.cpp  ppc_recomp.1.cpp  ppc_recomp.10.cpp  ppc_recomp.100.cpp  ppc_recomp.101.cpp  ppc_recomp.102.cpp  ppc_recomp.103.cpp  ppc_recomp.104.cpp  ppc_recomp.105.cpp  ppc_recomp.106.cpp  ppc_recomp.107.cpp  ppc_recomp.108.cpp  ppc_recomp.109.cpp  ppc_recomp.11.cpp  ppc_recomp.110.cpp  ppc_recomp.111.cpp  ppc_recomp.112.cpp  ppc_recomp.113.cpp  ppc_recomp.114.cpp  ppc_recomp.115.cpp  ppc_recomp.116.cpp  ppc_recomp.117.cpp  ppc_recomp.118.cpp  ppc_recomp.119.cpp  ppc_recomp.12.cpp  ppc_recomp.120.cpp  ppc_recomp.121.cpp  ppc_recomp.122.cpp  ppc_recomp.123.cpp  ppc_recomp.124.cpp  ppc_recomp.125.cpp  ppc_recomp.126.cpp  ppc_recomp.127.cpp  ppc_recomp.128.cpp  ppc_recomp.129.cpp  ppc_recomp.13.cpp  ppc_recomp.130.cpp  (+143 more)
mcla/: CMakeLists.txt  game_window.cpp  game_window.h  imports.cpp  main.cpp  stdafx.h
scripts/: analyse_xex.bat  out_ppc.bat  recomp_xex.bat  run.bat
